DeviceSettings move save button
Tasks 3 and 4 for issue #10

The save button is moved to the main view and causes an
ActivityIndicator to appear when loading bluetooth data

--- a/app/app.scss
+++ b/app/app.scss
@@ -59,6 +59,11 @@ Button {
 	font-size: 18pt;
 }
 
+.disabled {
+	color: $systemGray;
+	font-size: 18pt;
+}
+
 .setting-list-label {
 	text-transform: uppercase;
 	letter-spacing: 0.001em;
